--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <h2 class="">Join Us !</h2>
             <div class=" password-container d-flex justify-content-between gap-3 ">
                 <input type="text" placeholder="First Name" class="first-name">
-                <input type="text" placeholder="Last Name">
+                <input type="text" placeholder="Last Name" class="first-name">
             </div>
             <div class="password-container mt-2 d-flex ">
-                <input type="password" placeholder="Password..." id="password">
-                <i class="fa-solid fa-eye" id="eye"></i>
+                <input type="password" placeholder="Password..." id="password" class="first-name" maxlength="8" minlength="6">
+                <i class="fa-solid fa-eye " id="eye"></i>
             </div>
            
             
